--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -24,8 +24,8 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Run jar Create hosts
-      run: java -jar target/fast-hosts-1.0-SNAPSHOT.jar
+    - name: Run jar update readMe
+      run: java -jar target/audio-newspaper-1.0-SNAPSHOT.jar
     - name: Clear target
       run: rm -rf target/
 
