--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
     - name: Run jar update readMe
-      run: java -jar target/audio-newspaper-1.0-SNAPSHOT.jar
+      run: java -jar target/audio-newspaper-jar-with-dependencies.jar
     - name: Clear target
       run: rm -rf target/
 
