--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -6,7 +6,7 @@ name: update readMe
 on:
   push:
   schedule:
-    - cron: '0 * 23,9 * *'
+    - cron: '0 23,9 * * *'
   workflow_dispatch:
 
 jobs:
